Fixed navbar misalignment at sm-ms size

--- a/assets/less/site/layout-standard.less
+++ b/assets/less/site/layout-standard.less
@@ -278,12 +278,14 @@ img {
 body.admin-bar >.container #masthead #branding .branding-parent { top: 39px; }
 
 // Accordion panels
-.panel-heading {
-	margin-bottom: 0;
-}
+.panel-group{
+	.panel-heading {
+		margin-bottom: 0;
+	}
 
-.panel-title {
-	padding-bottom: 0;
+	.panel-title {
+		padding-bottom: 0;
+	}
 }
 
 
